# elevator

./: .coveragerc  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: ci_pipeline.sh
src/cli/: main.py
src/elevator/: __init__.py  controller.py  cost_model.py  elevator.py  result.py  strategy.py  utils.py
tests/e2e/: test_cli.py
tests/integration/: test_controller.py  test_elevator.py
tests/unit/: test_cost_model.py  test_elevator.py  test_strategy.py  test_utils.py
